--- a/print.html
+++ b/print.html
@@ -12,8 +12,12 @@ permalink: /print
 
 {% include experiences.html %}
 
+{% include publications.html %}
+
+{% include certifications.html %}
+
 {% include projects.html %}
 
-{% include publications.html %}
+{% include oss-contributions.html %}
 
 {% include skills.html %}
